--- a/knoppen.html
+++ b/knoppen.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
     <head>
-       .btn {
+      <style> .btn {
     border: none;
     background-color: inherit;
     padding: 14px 28px;
@@ -11,6 +11,7 @@
 }
 .btn:hover {background: #eee;}
 .success {color: green;}
+        </style>
     </head>
     
     <body>
