--- a/knoppen.html
+++ b/knoppen.html
@@ -15,7 +15,7 @@
     </head>
     
     <body>
-  <button class="btn">back</button>
-        <a href="index.html" >"btn"</a>
+  <button class="btn"><a href="index.html" >back</a></button>
+        <a href="index.html" >TEST</a>
     </body>
 </html>
