--- a/knoppen.html
+++ b/knoppen.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
     <head>
+        <title>Knoppen</title>
       <style> .btn {
     border: none;
     background-color: inherit;
