--- a/knoppen.html
+++ b/knoppen.html
@@ -16,7 +16,7 @@
     </head>
     
     <body>
-  <button class="btn"><a href="index.html" >back</a></button>
+ <a href="index.html" ><button class="btn">back</button></a>
         <a href="index.html" >TEST</a>
     </body>
 </html>
