--- a/test.html
+++ b/test.html
@@ -11,8 +11,14 @@ h1{
 color:rgb(255, 0, 0);
 text-align:left;
 }
-#BIO{
+.comic{
     font-family:"Comic Sans MS", cursive, sans-serif;
+}
+#hallo{
+    text-align:left;
+}
+#pagina{
+    text-align:left;
 }
 
 
@@ -26,18 +32,18 @@ text-align:left;
 	<p id= "pagina">Dit is een pagina waarin je een paar weetjes kan vinden over het 'succesvol' Youtube-kanaal BroGaming</p>
 	
 	<h2>Biografie</h2>
-		<p id="BIO">Het Youtube-kanaal 'BroGaming' werd op 16                 maart 2016               opgericht door de twee broers             : Jarne en Tiebe. Ze                 maken sinds toen             elke
+		<p class="comic">Het Youtube-kanaal 'BroGaming' werd op 16                 maart 2016               opgericht door de twee broers             : Jarne en Tiebe. Ze                 maken sinds toen             elke
 			week een video voor op hun kanaal. Ze maken vooral                game video's maar ook verschijnene er soms vlogs en               andere video's op het kanaal.
 			Ondertussen hebben ze al meer dan 300 abonnees en 
 			<strong>proberen</strong> nog steeds elke week een                 video te maken.</p>
 	
 		<h2>Jarne</h2>
-		    <p>Jarne is geboren op 27/03/2003 en zit in het middelbaar. Natuurlijk gamed hij graag maar hij houdt ook nog van alle andere dingen die te maken hebben met computers, bijvoorbeeld programeren, video bewerking, foto bewerking, etc. Zijn lievelings eten is pizza en hij lust geen chocolade :(</p>
+		    <p class="comic">Jarne is geboren op 27/03/2003 en zit in het middelbaar. Natuurlijk gamed hij graag maar hij houdt ook nog van alle andere dingen die te maken hebben met computers, bijvoorbeeld programeren, video bewerking, foto bewerking, etc. Zijn lievelings eten is pizza en hij lust geen chocolade :(</p>
     <h2>Tiebe</h2>
-        <p>Tiebe is geboren op 18/09/2005 en is dus 2 jaar jonger als zijn grote broer. Natuurlijk houdt hij ook van gamen, zijn favoriete game op dit moment is Fortnite Battle Royale. Hij zit op dit moment in het 2de jaar STEM en doet dit heel graag.  </p>
+        <p class="comic">Tiebe is geboren op 18/09/2005 en is dus 2 jaar jonger als zijn grote broer. Natuurlijk houdt hij ook van gamen, zijn favoriete game op dit moment is Fortnite Battle Royale. Hij zit op dit moment in het 2de jaar STEM en doet dit heel graag.  </p>
         
 <h2>Populairste video's</h2>
-		    <ol>
+		    <ol class="comic">
 		     <li>"Sok, de poes van EnzoKnol, namaken"</li> 
 		     <li>"Tilted Towers ownen!!"</li>
 		     <li>"Spelen met Helium!"</li>
@@ -45,6 +51,11 @@ text-align:left;
 		     <li>"BroGaming is terug in Spanje?!"</li>
 		  </ol>
 		  
+		 <h2>Laatstse video
+		 </h2>
+		   <iframe width="420" height="315"
+src="https://www.youtube.com/watch?v=PqpMfo7BYGI&t=51s">
+</iframe>"
 	
 
 
