--- a/BroGamingFanPage.html
+++ b/BroGamingFanPage.html
@@ -2,10 +2,12 @@
 <html>
 <head>
 <title>Bro Gaming fanpage</title>
+
 <style>
 body{
     font-family:"Trebuchet MS", Helvetica, sans-serif;
     text-align:center;
+    background-image:url("https://yt3.ggpht.com/-MsWzjGwPtfc/AAAAAAAAAAI/AAAAAAAAAAA/FbMgB0k5-SU/s88-c-k-no-mo-rj-c0xffffff/photo.jpg");
 }
 h1{ 
 color:rgb(255, 0, 0);
@@ -53,10 +55,7 @@ text-align:left;
 		  
 		 <h2>Laatstse video
 		 </h2>
-		   <iframe width="420" height="315"
-src="https://www.youtube.com/watch?v=PqpMfo7BYGI&t=51s">
-</iframe>"
-	
+
 
 
 </body>
