--- a/BroGamingFanPage.html
+++ b/BroGamingFanPage.html
@@ -7,7 +7,8 @@
 body{
     font-family:"Trebuchet MS", Helvetica, sans-serif;
     text-align:center;
-    background-image:url("https://yt3.ggpht.com/-MsWzjGwPtfc/AAAAAAAAAAI/AAAAAAAAAAA/FbMgB0k5-SU/s88-c-k-no-mo-rj-c0xffffff/photo.jpg");
+    background-image:url("https://yt3.ggpht.com/-MsWzjGwPtfc/AAAAAAAAAAI/AAAAAAAAAAA/FbMgB0k5-SU/s88-c-k-no-mo-rj-c0xffffff/photo.jpg"  opacity: 0.5;
+    filter: alpha(opacity=50););
 }
 h1{ 
 color:rgb(255, 0, 0);
