--- a/knoppen.html
+++ b/knoppen.html
@@ -9,6 +9,8 @@
     font-size: 16px;
     cursor: pointer;
     display: inline-block;
+    border-style: solid;
+     border-radius: 5px;
 }
 .btn:hover {background: #eee;}
 .success {color: green;}
@@ -17,6 +19,5 @@
     
     <body>
  <a href="index.html" ><button class="btn">back</button></a>
-        <a href="index.html" >TEST</a>
     </body>
 </html>
