--- a/BroGamingFanPage.html
+++ b/BroGamingFanPage.html
@@ -8,11 +8,12 @@ body{
     font-family:"Trebuchet MS", Helvetica, sans-serif;
     text-align:center;
     background-image:url("https://yt3.ggpht.com/-MsWzjGwPtfc/AAAAAAAAAAI/AAAAAAAAAAA/FbMgB0k5-SU/s88-c-k-no-mo-rj-c0xffffff/photo.jpg"  opacity: 0.5;
-    filter: alpha(opacity=50););
+    filter: alpha(opacity=0.5););
 }
 h1{ 
-color:orange;
+
 text-align:left;
+font-family:"Comic Sans MS", cursive, sans-serif;
 }
 .comic{
     font-family:"Comic Sans MS", cursive, sans-serif;
