--- a/BroGamingFanPage.html
+++ b/BroGamingFanPage.html
@@ -23,6 +23,18 @@ font-family:"Comic Sans MS", cursive, sans-serif;
 }
 #pagina{
     text-align:left;
+  .btn {
+    border: none;
+    background-color: inherit;
+    padding: 14px 28px;
+    font-size: 16px;
+    cursor: pointer;
+    display: inline-block;
+    border-style: solid;
+     border-radius: 5px;
+	}
+.btn:hover {background: #eee;}
+.success {color: green;}
 }
 
 
@@ -55,9 +67,7 @@ font-family:"Comic Sans MS", cursive, sans-serif;
 		     <li>"BroGaming is terug in Spanje?!"</li>
 		  </ol>
 		  
-		 <h2>Laatstse video
-		 </h2>
-
+		 <a href="index.html" ><button class="btn">back</button></a>
 
 
 </body>
