--- a/BroGamingFanPage.html
+++ b/BroGamingFanPage.html
@@ -35,7 +35,8 @@ font-family:"Comic Sans MS", cursive, sans-serif;
 .btn:hover {background: #eee;}
 .success {color: green;}
 }
-
+	ol{
+	text-align:center;}
 
 </style>
 </head>
