--- a/BroGamingFanPage.html
+++ b/BroGamingFanPage.html
@@ -7,7 +7,7 @@
 body{
     font-family:"Trebuchet MS", Helvetica, sans-serif;
     text-align:center;
-    background-image:url("https://yt3.ggpht.com/-MsWzjGwPtfc/AAAAAAAAAAI/AAAAAAAAAAA/FbMgB0k5-SU/s88-c-k-no-mo-rj-c0xffffff/photo.jpg" widht:"1000";
+    background-image:url("https://yt3.ggpht.com/-MsWzjGwPtfc/AAAAAAAAAAI/AAAAAAAAAAA/FbMgB0k5-SU/s88-c-k-no-mo-rj-c0xffffff/photo.jpg" width:"1000";
 }
 h1{ 
 
