--- a/BroGamingFanPage.html
+++ b/BroGamingFanPage.html
@@ -66,6 +66,9 @@ font-family:"Comic Sans MS", cursive, sans-serif;
 		     <li>"Reageren op Skeergaming disstrack!"</li>
 		     <li>"BroGaming is terug in Spanje?!"</li>
 		  </ol>
+	<h2>laatste video</h2>
+		<a href:"https://www.youtube.com/watch?v=PqpMfo7BYGI"><img src:"https://i.ytimg.com/vi/PqpMfo7BYGI/hqdefault.jpg?sqp=
+-oaymwEZCPYBEIoBSFXyq4qpAwsIARUAAIhCGAFwAQ==&rs=AOn4CLAv22v_UMp2FUFmPGXL9-n6_NkGPw" width:"200"><a>	
 		  
 		 <a href="index.html" ><button class="btn">back</button></a>
 
