--- a/BroGamingFanPage.html
+++ b/BroGamingFanPage.html
@@ -7,7 +7,7 @@
 body{
     font-family:"Trebuchet MS", Helvetica, sans-serif;
     text-align:center;
-    background-image:url("https://yt3.ggpht.com/-MsWzjGwPtfc/AAAAAAAAAAI/AAAAAAAAAAA/FbMgB0k5-SU/s88-c-k-no-mo-rj-c0xffffff/photo.jpg" width:"1000";
+    background-image:url("https://yt3.ggpht.com/-MsWzjGwPtfc/AAAAAAAAAAI/AAAAAAAAAAA/FbMgB0k5-SU/s88-c-k-no-mo-rj-c0xffffff/photo.jpg") width:"2000";
 }
 h1{ 
 
@@ -66,9 +66,9 @@ font-family:"Comic Sans MS", cursive, sans-serif;
 		     <li>"Reageren op Skeergaming disstrack!"</li>
 		     <li>"BroGaming is terug in Spanje?!"</li>
 		  </ol>
-	<h2>laatste video</h2>
-		<a href:"https://www.youtube.com/watch?v=PqpMfo7BYGI"><img src:"https://i.ytimg.com/vi/PqpMfo7BYGI/hqdefault.jpg?sqp=
--oaymwEZCPYBEIoBSFXyq4qpAwsIARUAAIhCGAFwAQ==&rs=AOn4CLAv22v_UMp2FUFmPGXL9-n6_NkGPw" width:"200"><a>	
+	<h2>laatste videoà</h2>
+		<img src:"https://i.ytimg.com/vi/PqpMfo7BYGI/hqdefault.jpg?sqp=
+-oaymwEZCPYBEIoBSFXyq4qpAwsIARUAAIhCGAFwAQ==&rs=AOn4CLAv22v_UMp2FUFmPGXL9-n6_NkGPw" width:"200">
 		  
 		 <a href="index.html" ><button class="btn">back</button></a>
 
