--- a/secret.html
+++ b/secret.html
@@ -1,2 +1,14 @@
-<doctype! html>
-<HTML>
+<!doctype html>
+<html>
+    <head>
+        <title>Easter egg</title>
+    </head>
+    
+    <body>
+      <h1>EASTER EGG!!</h1>
+      <h2>Gefeliciteerd! Je hebt mijn easter egg gevonden!<h2>
+        <p>Klik <a href:"https://www.youtube.com/watch?v=CVpdBCM6VjU">HIER</a> om je verassing te ontvangen.<br>Dankjewel om mijn website te bezoeken!</p>
+        
+
+    </body>
+</html>
