--- a/secret.html
+++ b/secret.html
@@ -9,6 +9,6 @@
       <h2>Gefeliciteerd! Je hebt mijn easter egg gevonden!<h2>
         <p>Klik <a href:"https://www.youtube.com/watch?v=CVpdBCM6VjU">HIER</a> om je verassing te ontvangen.<br>Dankjewel om mijn website te bezoeken!</p>
         
-
+          <h5>mady by: Jarne2703</h5>
     </body>
 </html>
