--- a/BroGamingFanPage.html
+++ b/BroGamingFanPage.html
@@ -7,7 +7,7 @@
 body{
     font-family:"Trebuchet MS", Helvetica, sans-serif;
     text-align:center;
-	background-image: url(https://yt3.ggpht.com/-MsWzjGwPtfc/AAAAAAAAAAI/AAAAAAAAAAA/FbMgB0k5-SU/s88-c-k-no-mo-rj-c0xffffff/photo.jpg)
+	background-image: url(https://yt3.ggpht.com/-MsWzjGwPtfc/AAAAAAAAAAI/AAAAAAAAAAA/FbMgB0k5-SU/s88-c-k-no-mo-rj-c0xffffff/photo.jpg);
     	background-repeat: no-repeat;
 }
 h1{ 
@@ -67,9 +67,9 @@ font-family:"Comic Sans MS", cursive, sans-serif;
 		     <li>"Reageren op Skeergaming disstrack!"</li>
 		     <li>"BroGaming is terug in Spanje?!"</li>
 		  </ol>
-	<h2>laatste videoà</h2>
+	<h2>laatste videoà</h>
 		<img src:"https://i.ytimg.com/vi/PqpMfo7BYGI/hqdefault.jpg?sqp=
--oaymwEZCPYBEIoBSFXyq4qpAwsIARUAAIhCGAFwAQ==&rs=AOn4CLAv22v_UMp2FUFmPGXL9-n6_NkGPw" width:"200">
+-oaymwEZCPYBEIoBSFXyq4qpAwsIARUAAIhCGAFwAQ==&rs=AOn4CLAv22v_UMp2FUFmPGXL9-n6_NkGPw">
 		  
 		 <a href="index.html" ><button class="btn">back</button></a>
 
