--- a/BroGamingFanPage.html
+++ b/BroGamingFanPage.html
@@ -67,7 +67,7 @@ font-family:"Comic Sans MS", cursive, sans-serif;
 		     <li>"Reageren op Skeergaming disstrack!"</li>
 		     <li>"BroGaming is terug in Spanje?!"</li>
 		  </ol>
-	<h2>laatste videoà</h>
+	<h2>laatste video</h>
 		<img src:"https://i.ytimg.com/vi/PqpMfo7BYGI/hqdefault.jpg?sqp=
 -oaymwEZCPYBEIoBSFXyq4qpAwsIARUAAIhCGAFwAQ==&rs=AOn4CLAv22v_UMp2FUFmPGXL9-n6_NkGPw">
 		  
