--- a/secret.html
+++ b/secret.html
@@ -7,7 +7,8 @@
     <body>
       <h1>EASTER EGG!!</h1>
       <h2>Gefeliciteerd! Je hebt mijn easter egg gevonden!<h2>
-        <p>Klik <a href:"https://www.youtube.com/watch?v=CVpdBCM6VjU">HIER</a> om je verassing te ontvangen.<br>Dankjewel om mijn website te bezoeken!</p>
+      <a href:"https://www.youtube.com/watch?v=CVpdBCM6VjU">  <p>Klik HIER om je verassing te ontvangen.</p><a href:"https://www.youtube.com/watch?v=CVpdBCM6VjU">
+       <p>Dankjewel om mijn website te bezoeken!</p>
         
           <h5>mady by: Jarne2703</h5>
     </body>
