--- a/BroGamingFanPage.html
+++ b/BroGamingFanPage.html
@@ -7,8 +7,12 @@
 body{
     font-family:"Trebuchet MS", Helvetica, sans-serif;
     text-align:center;
+	color:white;
 	background-image: url(https://yt3.ggpht.com/-MsWzjGwPtfc/AAAAAAAAAAI/AAAAAAAAAAA/FbMgB0k5-SU/s88-c-k-no-mo-rj-c0xffffff/photo.jpg);
     	background-repeat: no-repeat;
+	background-position: right top;
+	background-color:black;
+	
 }
 h1{ 
 
