--- a/knoppen.html
+++ b/knoppen.html
@@ -11,6 +11,7 @@
     display: inline-block;
     border-style: solid;
      border-radius: 5px;
+     text-align:center;
 }
 .btn:hover {background: #eee;}
 .success {color: green;}
