--- a/BroGamingFanPage.html
+++ b/BroGamingFanPage.html
@@ -72,8 +72,7 @@ font-family:"Comic Sans MS", cursive, sans-serif;
 		     <li>"BroGaming is terug in Spanje?!"</li>
 		  </ol>
 	<h2>laatste video</h>
-		<img src:"https://i.ytimg.com/vi/PqpMfo7BYGI/hqdefault.jpg?sqp=
--oaymwEZCPYBEIoBSFXyq4qpAwsIARUAAIhCGAFwAQ==&rs=AOn4CLAv22v_UMp2FUFmPGXL9-n6_NkGPw">
+		<img src:"https://i.ytimg.com/vi/PqpMfo7BYGI/hqdefault.jpg?sqp=-oaymwEZCPYBEIoBSFXyq4qpAwsIARUAAIhCGAFwAQ==&rs=AOn4CLAv22v_UMp2FUFmPGXL9-n6_NkGPw">
 		  
 		 <a href="index.html" ><button class="btn">back</button></a>
 
