--- a/BroGamingFanPage.html
+++ b/BroGamingFanPage.html
@@ -18,6 +18,7 @@ h1{
 
 text-align:left;
 font-family:"Comic Sans MS", cursive, sans-serif;
+font-size:50px;
 }
 .comic{
     font-family:"Comic Sans MS", cursive, sans-serif;
