--- a/BroGamingFanPage.html
+++ b/BroGamingFanPage.html
@@ -11,7 +11,7 @@ body{
 	background-image: url(https://yt3.ggpht.com/-MsWzjGwPtfc/AAAAAAAAAAI/AAAAAAAAAAA/FbMgB0k5-SU/s88-c-k-no-mo-rj-c0xffffff/photo.jpg);
     	background-repeat: no-repeat;
 	background-position: right top;
-	background-color:black;
+	background-color:rgb(33, 33, 33);
 	
 }
 h1{ 
